--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,116 @@
     <link rel="stylesheet" href="/dist/output.css" />
   </head>
   <body>
-    <h1>Hii there</h1>
+    <!-- Navbar  -->
+    <nav>
+      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+        <div class="relative flex h-16 items-center justify-between">
+          <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
+            <!-- Mobile menu button-->
+            <button
+              type="button"
+              class="rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+              aria-controls="mobile-menu"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Open main menu</span>
+              <svg
+                class="block h-6 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                />
+              </svg>
+              <svg
+                class="hidden h-6 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M6 18L18 6M6 6l12 12"
+                />
+              </svg>
+            </button>
+          </div>
+          <div
+            class="flex flex-1 items-center justify-between sm:items-stretch"
+          >
+            <div class="flex flex-shrink-0 items-center">
+              <p class="text-white text-xl cursor-pointer font-bold">
+                Young Nomads
+              </p>
+            </div>
+            <div class="hidden sm:ml-6 sm:block">
+              <div class="flex space-x-4">
+                <a
+                  href="#"
+                  class="text-gray-300 hover:text-white px-3 py-2 text-sm font-medium"
+                  aria-current="page"
+                  >About</a
+                >
+
+                <a
+                  href="#"
+                  class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                  >Case Studies</a
+                >
+
+                <a
+                  href="#"
+                  class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                  >Contact</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Mobile menu, show/hide based on menu state. -->
+      <div class="sm:hidden" id="mobile-menu">
+        <div class="space-y-1 px-2 pt-2 pb-3">
+          <a
+            href="#"
+            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            aria-current="page"
+            >Dashboard</a
+          >
+
+          <a
+            href="#"
+            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            >Team</a
+          >
+
+          <a
+            href="#"
+            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            >Projects</a
+          >
+
+          <a
+            href="#"
+            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            >Calendar</a
+          >
+        </div>
+      </div>
+    </nav>
+
     <!-- Script -->
     <script src="/js/script.js"></script>
   </body>
