--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
               class="rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
               aria-controls="mobile-menu"
               aria-expanded="false"
+              id="menu-btn"
             >
               <span class="sr-only">Open main menu</span>
               <svg
@@ -120,6 +121,6 @@
     </nav>
 
     <!-- Script -->
-    <script src="/js/script.js"></script>
+    <script src="/dist/script.js"></script>
   </body>
 </html>
