--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Young Nomads - Your SEO Partner</title>
     <!-- Style -->
     <link rel="stylesheet" href="/dist/output.css" />
+    <link rel="stylesheet" href="/dist/aos.css" />
   </head>
   <body>
     <!-- Navbar  -->
@@ -121,6 +122,7 @@
     </nav>
 
     <!-- Script -->
-    <script src="/dist/script.js"></script>
+    <script src="/public/script.js"></script>
+    <script src="/dist/aos.js"></script>
   </body>
 </html>
