--- a/src/index.html
+++ b/src/index.html
@@ -4,125 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Font Awesome Link  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- Styles  -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheee" href="/css/aos.css" />
+
+    <!--main page css-->
+    <link rel="stylesheet" href="/css/style.css" />
+
     <title>Young Nomads - Your SEO Partner</title>
-    <!-- Style -->
-    <link rel="stylesheet" href="/dist/output.css" />
-    <link rel="stylesheet" href="/dist/aos.css" />
   </head>
   <body>
-    <!-- Navbar  -->
-    <nav>
-      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-        <div class="relative flex h-16 items-center justify-between">
-          <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
-            <!-- Mobile menu button-->
-            <button
-              type="button"
-              class="rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
-              aria-controls="mobile-menu"
-              aria-expanded="false"
-              id="menu-btn"
-            >
-              <span class="sr-only">Open main menu</span>
-              <svg
-                class="block h-6 w-6"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-                />
-              </svg>
-              <svg
-                class="hidden h-6 w-6"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M6 18L18 6M6 6l12 12"
-                />
-              </svg>
-            </button>
-          </div>
-          <div
-            class="flex flex-1 items-center justify-between sm:items-stretch"
-          >
-            <div class="flex flex-shrink-0 items-center">
-              <p class="text-white text-xl cursor-pointer font-bold">
-                Young Nomads
-              </p>
-            </div>
-            <div class="hidden sm:ml-6 sm:block">
-              <div class="flex space-x-4">
-                <a
-                  href="#"
-                  class="text-gray-300 hover:text-white px-3 py-2 text-sm font-medium"
-                  aria-current="page"
-                  >About</a
-                >
+    <!-- MENU BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Young Nomads</a>
 
-                <a
-                  href="#"
-                  class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-                  >Case Studies</a
-                >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <a
-                  href="#"
-                  class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-                  >Contact</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-lg-auto">
+            <li class="nav-item">
+              <a href="#about" class="nav-link smoothScroll">About</a>
+            </li>
 
-      <!-- Mobile menu, show/hide based on menu state. -->
-      <div class="sm:hidden" id="mobile-menu">
-        <div class="space-y-1 px-2 pt-2 pb-3">
-          <a
-            href="#"
-            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
-            aria-current="page"
-            >Dashboard</a
-          >
-
-          <a
-            href="#"
-            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
-            >Team</a
-          >
-
-          <a
-            href="#"
-            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
-            >Projects</a
-          >
-
-          <a
-            href="#"
-            class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
-            >Calendar</a
-          >
+            <li class="nav-item">
+              <a href="#class" class="nav-link smoothScroll">Case Studies</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link smoothScroll">Contact</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
 
     <!-- Script -->
-    <script src="/public/script.js"></script>
-    <script src="/dist/aos.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/aos.js"></script>
+    <script src="/js/smoothscroll.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
