--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Young Nomads - Your SEO Partner</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
 </head>
@@ -14,23 +14,20 @@
     <!--top banner-->
     <div class="top-banner">
         <div class="container">
-            <div class="small-bold-text banner-text">🥳New to Usability Hub:open and closed card sorting</div>
+            <div class="small-bold-text banner-text">🥳New to Young Nomads:open and closed card sorting</div>
         </div>
     </div>
 
     <!-- nav bar -->
     <nav class="container main-nav flex">
         <a href="#" class="company-logo">
-            <img src="./assets/asset 1.png" alt="company company-logo">
+            <img src="./assets/brand-logo.png" alt="company company-logo">
         </a>
         <div class="nav-links ac" id="nav-links">
             <ul class="flex">
-                <li><a href="#" class="hover-link">Products</a></li>
-                <li><a href="#" class="hover-link">Customer</a></li>
-                <li><a href="#" class="hover-link">Pricing</a></li>
-                <li><a href="#" class="hover-link">Resources</a></li>
-                <li><a href="#" class="hover-link secondary-button">Sign in</a></li>
-                <li><a href="#" class="hover-link primary-button">Sign up</a></li>
+                <li><a href="#" class="hover-link">About</a></li>
+                <li><a href="#" class="hover-link">Case Studies</a></li>
+                <li><a href="#" class="hover-link">Contact</a></li>
             </ul>
         </div>
         <a href="#" class="nav-toggle hover-link" id="nav-toggle">
@@ -38,13 +35,13 @@
         </a>
         </div>
     </nav>
+
     <!-- header section -->
     <header>
         <div class="container header-section flex">
             <div class="header-left">
-                <h1>Design Confidently</h1>
-                <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by
-                    validating them with real users.</p>
+                <h1>Young Nomads</h1>
+                <p>The SEO Company that will grow you online..</p>
                 <a href="#" class="primary-button get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
@@ -57,7 +54,9 @@
     <section class="companies-section">
         <div class="container">
             <div class="small-bold-text companies-header">
-                The world’s best companies rely on UsabilityHub to make better design decisions.
+                <h4>
+                    The world’s best companies rely on Young Nomads to improve their online performance.
+                </h4>
 
                 <div class="logos flex">
                     <img class="logo" src="./assets/asset 3.png" alt="">
@@ -218,44 +217,42 @@
     <footer>
         <div class="container flex footer-container">
             <a href="#" class="company-logo">
-                <img src="./assets/asset 1.png" alt="">
+                <img src="./assets/brand-logo.png" alt="">
             </a>
             <div class="link-column flex">
-                <h4>Product</h4>
-                <a href="#" class="hover-link">Overview</a>
-                <a href="#" class="hover-link">Pricing</a>
-                <a href="#" class="hover-link">UsabilityHub panel</a>
-                <a href="#" class="hover-link">Customers</a>
-                <a href="#" class="hover-link">Status page</a>
-                <a href="#" class="hover-link">Sign up</a>
-                <a href="#" class="hover-link">Book a demo</a>
+                <h4>Digital Marketing Institutes</h4>
+                <a href="#" class="hover-link">Udaipur</a>
+                <a href="#" class="hover-link">Indore</a>
+                <a href="#" class="hover-link">Calicut</a>
+                <a href="#" class="hover-link">Dehradun</a>
+                <a href="#" class="hover-link">Raipur</a>
             </div>
             <div class="link-column flex">
-                <h4>Methodologies</h4>
-                <a href="#" class="hover-link">Card sorting</a>
-                <a href="#" class="hover-link">Prototype testing</a>
-                <a href="#" class="hover-link">First click tests</a>
-                <a href="#" class="hover-link">Preference tests</a>
-                <a href="#" class="hover-link">Five second tests</a>
-                <a href="#" class="hover-link">Design surveys</a>
+                <h4>Digital Marketing Companies</h4>
+                <a href="#" class="hover-link">New York</a>
+                <a href="#" class="hover-link">Delhi</a>
+                <a href="#" class="hover-link">Trivandrum</a>
+                <a href="#" class="hover-link">Kochi</a>
+                <a href="#" class="hover-link">Kolkata</a>
+                <a href="#" class="hover-link">Ahmedabad</a>
+                <a href="#" class="hover-link">Indore</a>
             </div>
             <div class="link-column flex">
-                <h4>Resources</h4>
-                <a href="#" class="hover-link">Blog</a>
-                <a href="#" class="hover-link">Examples</a>
-                <a href="#" class="hover-link">Testing guides</a>
-                <a href="#" class="hover-link">Help center</a>
-                <a href="#" class="hover-link">Contact</a>
-                <a href="#" class="hover-link">Careers</a>
+                <h4>Affiliate Products</h4>
+                <a href="#" class="hover-link">SEMRush Free Trial</a>
+                <a href="#" class="hover-link">Bluehost Hosting</a>
+                <a href="#" class="hover-link">Affiliate Disclosure</a>
+                <a href="#" class="hover-link">Affiliate Agreement</a>
             </div>
         </div>
     </footer>
     <div class="subfooter">
         <div class="container flex toggleButton sub-footer-container">
             <a href="#" class="hover-link">Privacy policy</a>
-            <a href="#" class="hover-link">Terms & Condition</a>
-            <a href="#" class="hover-link">Security Information</a>
-            <a href="#" class="hover-link"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#" class="hover-link">Terms of Use</a>
+            <a href="#" class="hover-link">Link Policy</a>
+            <a href="#" class="hover-link">FB Policy</a>
+            <a href="#" class="hover-link"><i class="fa-brands fa-linkedin"></i></a>
             <a href="#" class="hover-link"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </div>
