--- a/index.html
+++ b/index.html
@@ -183,23 +183,23 @@
             <div class="examples-area flex">
                 <a href=" #" class="examples-card">
                     <div class="overlay"></div>
-                    <h3 class="card-text">Can users complete a task in my software interface?</h3>
+                    <h3 class="card-text">Content Marketing</h3>
                 </a>
 
                 <a class="examples-card" href="#"
                     style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/asset\ 37.jpeg');">
                     <div class="overlay"></div>
-                    <h3 class="card-text">Can users find important pages on my website?</h3>
+                    <h3 class="card-text">On Page SEO</h3>
                 </a>
 
                 <a class="examples-card" href="#"
                     style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/asset\ 38.jpeg');">
                     <div class="overlay"></div>
-                    <h3 class="card-text">Is my website’s intended audience clear?</h3>
+                    <h3 class="card-text">Technical SEO</h3>
                 </a>
 
                 <a class="examples-card" href="#">
-                    <h3 class="card-text">Do visitors understand what a page is about?</h3>
+                    <h3 class="card-text">Off Page SEO</h3>
                 </a>
             </div>
         </div>
@@ -208,8 +208,10 @@
     <!-- cta section -->
     <div class="cta-section">
         <div class="container flex cta-section-container">
-            <h2>Start testing today</h2>
-            <p>Take the guesswork out of design decisions</p>
+            <h2>Why Choose Us</h2>
+            <p>Its simple, we deliver results.</p>
+            <p>Growth. 🚀 </p>
+            <p>Organic traffic from Google.</p>
             <a href="#" class="primary-button">Get started</a>
         </div>
     </div>
