--- a/index.html
+++ b/index.html
@@ -218,9 +218,15 @@
     <!-- footer -->
     <footer>
         <div class="container flex footer-container">
-            <a href="#" class="company-logo">
-                <img src="./assets/brand-logo.png" alt="">
-            </a>
+            <div class="logo-link-div">
+                <a href="#" class="company-logo">
+                    <img src="./assets/brand-logo.png" alt="">
+                </a>
+                <div class="link-div">
+                    <a href="#" class="hover-link"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" class="hover-link"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
             <div class="link-column flex">
                 <h4>Digital Marketing Institutes</h4>
                 <a href="#" class="hover-link">Udaipur</a>
@@ -249,14 +255,13 @@
         </div>
     </footer>
     <div class="subfooter">
-        <div class="container flex toggleButton sub-footer-container">
+        <div class=" flex toggleButton sub-footer-container">
             <a href="#" class="hover-link">Privacy policy</a>
             <a href="#" class="hover-link">Terms of Use</a>
             <a href="#" class="hover-link">Link Policy</a>
             <a href="#" class="hover-link">FB Policy</a>
-            <a href="#" class="hover-link"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#" class="hover-link"><i class="fa-brands fa-twitter"></i></a>
         </div>
+        <h5>Copyright © 2023 Young Nomads | Digital Marketing</h5>
     </div>
     <script src="https://kit.fontawesome.com/628003722a.js" crossorigin="anonymous"></script>
     
