--- a/index.html
+++ b/index.html
@@ -181,24 +181,26 @@
                 <a href="#" class="secondary-button">See more examples<i class="fa-solid fa-right-long"></i></a>
             </div>
             <div class="examples-area flex">
-                <a href=" #" class="examples-card">
+
+                <a class="examples-card" href="#" style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service1.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">Content Marketing</h3>
                 </a>
 
                 <a class="examples-card" href="#"
-                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/asset\ 37.jpeg');">
+                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service2.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">On Page SEO</h3>
                 </a>
 
                 <a class="examples-card" href="#"
-                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/asset\ 38.jpeg');">
+                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service3.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">Technical SEO</h3>
                 </a>
 
-                <a class="examples-card" href="#">
+                <a class="examples-card" href="#" style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service4.webp');">
+                    <div class="overlay"></div>
                     <h3 class="card-text">Off Page SEO</h3>
                 </a>
             </div>
