update home section

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <!--top banner-->
     <div class="top-banner">
         <div class="container">
-            <div class="small-bold-text banner-text">🥳New to Young Nomads:open and closed card sorting</div>
+            <p class="small-bold-text banner-text">What's new to Young Nomads - open and closed card sorting</p>
         </div>
     </div>
 
     <!-- nav bar -->
     <nav class="container main-nav flex" data-aos="fade-down" data-aos-delay="1200" data-aos-duration="1000">
         <a href="#" class="company-logo">
-            <img src="./assets/brand-logo.png" alt="company company-logo">
+            <!-- <img src="./assets/brand-logo.png" alt="company company-logo"> -->
+            <p class="brand-logo">YoungNomads</p>
         </a>
         <div class="nav-links ac" id="nav-links">
             <ul class="flex">
@@ -43,7 +44,7 @@
             <div class="header-left">
                 <h1 data-aos="fade-down" data-aos-delay="400">Young Nomads</h1>
                 <p data-aos="fade-down" data-aos-delay="500">The SEO Company that will grow you online..</p>
-                <a href="#" class="primary-button get-started-btn" data-aos="fade-down" data-aos-delay="600">Get Started</a>
+                <a href="#" class="primary-button get-started-btn" data-aos="fade-down" data-aos-delay="700">Get Started</a>
             </div>
             <div class="header-right" data-aos="fade-up" data-aos-delay="700">
                 <img src="./assets/asset 2.png" alt="Hero image">
@@ -60,13 +61,21 @@
                 </h4>
 
                 <div class="logos flex">
-                    <img class="logo" src="./assets/asset 3.png" alt="">
-                    <img class="logo" src="./assets/asset 4.png" alt="">
-                    <img class="logo" src="./assets/asset 5.png" alt="">
-                    <img class="logo" src="./assets/asset 6.png" alt="">
-                    <img class="logo" src="./assets/asset 7.png" alt="">
-                    <img class="logo" src="./assets/asset 8.svg" alt="">
-                    <img class="logo" src="./assets/asset 9.png" alt="">
+                    <div class="logo-wrapper">
+                        <img class="logo" src="./assets/company1.svg" alt="">
+                    </div>
+                    <div class="logo-wrapper">
+                        <img class="logo" src="./assets/company2.svg" alt="">
+                    </div>
+                    <div class="logo-wrapper">
+                        <img class="logo" src="./assets/company3.svg" alt="">
+                    </div>
+                    <div class="logo-wrapper">
+                        <img class="logo" src="./assets/company4.svg" alt="">
+                    </div>
+                    <div class="logo-wrapper">
+                        <img class="logo" src="./assets/company5.svg" alt="">
+                    </div>
 
                 </div>
             </div>
