update feature section

--- a/index.html
+++ b/index.html
@@ -88,28 +88,28 @@
     <section class="features-section">
         <div class="container">
             <div class="features-header">
-                <h2>Your user research Swiss Army knife</h2>
+                <h2>Gain Context, Address Blind Spots, and Eliminate Universal Risk</h2>
                 <a href="#" class="secondary-button">See all features <i class="fa-solid fa-right-long"></i></a>
             </div>
             <div class="features-area flex">
                 <div class="features-card flex">
                     <img src="./assets/asset 11.svg" alt="">
-                    <h3>Card sorting</h3>
-                    <p>Discover how people group and label information.</p>
+                    <h3>Gain Context</h3>
+                    <p>Through data aggregation, Hubble brings context to your existing data and identifies new assets and risks currently flying under the radar of the overall network – bringing agentless visibility to your entire tech stack.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex">
                     <img src="./assets/asset 13.svg" alt="">
-                    <h3>Prototype tests</h3>
-                    <p>Discover how people navigate your Figma prototypes.</p>
+                    <h3>Address Blind Spots</h3>
+                    <p>By thoroughly understanding the state of your enterprise and what is going on, organizations are able to address gaps in a timely and effective manner.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex">
                     <img src="./assets/asset 14.svg" alt="">
-                    <h3>First click tests</h3>
-                    <p>Test interaction with first click and navigation tests.</p>
+                    <h3>Eliminate Risk</h3>
+                    <p>By fully understanding what you know about your network and gaining visibility into previous black holes, organizations can fully remediate risks previously unavailable to them.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
