--- a/index.html
+++ b/index.html
@@ -82,31 +82,29 @@
         </div>
     </section>
 
-
-
     <!-- feature section -->
     <section class="features-section">
         <div class="container">
             <div class="features-header">
-                <h2>Gain Context, Address Blind Spots, and Eliminate Universal Risk</h2>
-                <a href="#" class="secondary-button">See all features <i class="fa-solid fa-right-long"></i></a>
+                <h2 data-aos="fade-up">Gain Context, Address Blind Spots, and Eliminate Universal Risk</h2>
+                <a href="#" class="secondary-button" data-aos="fade-up">See all features <i class="fa-solid fa-right-long"></i></a>
             </div>
             <div class="features-area flex">
-                <div class="features-card flex">
+                <div class="features-card flex" data-aos="fade-up-right">
                     <img src="./assets/asset 11.svg" alt="">
                     <h3>Gain Context</h3>
                     <p>Through data aggregation, Hubble brings context to your existing data and identifies new assets and risks currently flying under the radar of the overall network – bringing agentless visibility to your entire tech stack.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
-                <div class="features-card flex">
+                <div class="features-card flex" data-aos="fade-up">
                     <img src="./assets/asset 13.svg" alt="">
                     <h3>Address Blind Spots</h3>
                     <p>By thoroughly understanding the state of your enterprise and what is going on, organizations are able to address gaps in a timely and effective manner.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
-                <div class="features-card flex">
+                <div class="features-card flex" data-aos="fade-up-left">
                     <img src="./assets/asset 14.svg" alt="">
                     <h3>Eliminate Risk</h3>
                     <p>By fully understanding what you know about your network and gaining visibility into previous black holes, organizations can fully remediate risks previously unavailable to them.</p>
@@ -114,20 +112,20 @@
                 </div>
 
 
-                <div class="features-card flex">
+                <div class="features-card flex" data-aos="fade-up-right">
                     <img src="./assets/asset 15.svg" alt="">
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
-                <div class="features-card flex">
+                <div class="features-card flex" data-aos="fade-up">
                     <img src="./assets/asset 16.svg" alt="">
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
-                <div class="features-card flex">
+                <div class="features-card flex" data-aos="fade-up-left">
                     <img src="./assets/asset 17.svg" alt="">
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
@@ -147,8 +145,7 @@
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
-                    experiences for your users.
+                <p>Understand, quantify, and mitigate underlying risk by validating your assets and their risks.
                 </p>
             </div>
         </div>
@@ -162,8 +159,7 @@
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
-                    experiences for your users.
+                <p>Provide assurance in monitoring and management of IT software, hardware, systems and integrations owned by the business.
                 </p>
             </div>
         </div>
@@ -177,8 +173,7 @@
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
-                    experiences for your users.
+                <p>Ensure timely and effective response to an investigation by being able to confidently answer asset related questions.
                 </p>
             </div>
         </div>
@@ -232,11 +227,14 @@
         <div class="container flex footer-container">
             <div class="logo-link-div">
                 <a href="#" class="company-logo">
-                    <img src="./assets/brand-logo.png" alt="">
+                    <!-- <img src="./assets/brand-logo.png" alt=""> -->
+                    <p class="brand-logo">YoungNomads</p>
                 </a>
                 <div class="link-div">
-                    <a href="#" class="hover-link"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#" class="hover-link"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="hover-link"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
+                </div>
+                <div class="link-div">
+                    <a href="#" class="hover-link"><i class="fa-brands fa-twitter"></i>Twitter</a>
                 </div>
             </div>
             <div class="link-column flex">
