--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Young Nomads - Your SEO Partner</title>
+
+    <!-- Styles -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -25,6 +27,7 @@
             <!-- <img src="./assets/brand-logo.png" alt="company company-logo"> -->
             <p class="brand-logo">YoungNomads</p>
         </a>
+
         <div class="nav-links ac" id="nav-links">
             <ul class="flex">
                 <li><a href="#" class="hover-link">About</a></li>
@@ -32,6 +35,7 @@
                 <li><a href="#" class="hover-link">Contact</a></li>
             </ul>
         </div>
+
         <a href="#" class="nav-toggle hover-link" id="nav-toggle">
             <i class="fa-sharp fa-solid fa-bars"></i>
         </a>
@@ -47,7 +51,7 @@
                 <a href="#" class="primary-button get-started-btn" data-aos="fade-down" data-aos-delay="700">Get Started</a>
             </div>
             <div class="header-right" data-aos="fade-up" data-aos-delay="700">
-                <img src="./assets/asset 2.png" alt="Hero image">
+                <img src="./assets/img1.png" alt="Hero image">
             </div>
         </div>
     </header>
@@ -76,7 +80,6 @@
                     <div class="logo-wrapper">
                         <img class="logo" src="./assets/company5.svg" alt="">
                     </div>
-
                 </div>
             </div>
         </div>
@@ -89,6 +92,7 @@
                 <h2 data-aos="fade-up">Gain Context, Address Blind Spots, and Eliminate Universal Risk</h2>
                 <a href="#" class="secondary-button" data-aos="fade-up">See all features <i class="fa-solid fa-right-long"></i></a>
             </div>
+
             <div class="features-area flex">
                 <div class="features-card flex" data-aos="fade-up-right">
                     <img src="./assets/asset 11.svg" alt="">
@@ -98,40 +102,39 @@
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up">
-                    <img src="./assets/asset 13.svg" alt="">
+                    <img src="./assets/feature1.svg" alt="">
                     <h3>Address Blind Spots</h3>
                     <p>By thoroughly understanding the state of your enterprise and what is going on, organizations are able to address gaps in a timely and effective manner.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up-left">
-                    <img src="./assets/asset 14.svg" alt="">
+                    <img src="./assets/feature2.svg" alt="">
                     <h3>Eliminate Risk</h3>
                     <p>By fully understanding what you know about your network and gaining visibility into previous black holes, organizations can fully remediate risks previously unavailable to them.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
-
                 <div class="features-card flex" data-aos="fade-up-right">
-                    <img src="./assets/asset 15.svg" alt="">
+                    <img src="./assets/feature3.svg" alt="">
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
+
                 <div class="features-card flex" data-aos="fade-up">
-                    <img src="./assets/asset 16.svg" alt="">
+                    <img src="./assets/feature4.svg" alt="">
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up-left">
-                    <img src="./assets/asset 17.svg" alt="">
+                    <img src="./assets/feature6.svg" alt="">
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
-
             </div>
         </div>
     </section>
@@ -140,8 +143,9 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="./assets/asset 18.png" alt="">
+                <img src="./assets/img2.png" alt="">
             </div>
+
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
@@ -149,12 +153,12 @@
                 </p>
             </div>
         </div>
-
     </section>
+    
     <section class="big-feature-section">
         <div class="container flex big-feature-container" id="second-big-feature">
             <div class="feature-img">
-                <img src="./assets/asset 21.png" alt="">
+                <img src="./assets/img3.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -168,7 +172,7 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="./assets/asset 24.png" alt="">
+                <img src="./assets/img4.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -178,6 +182,7 @@
             </div>
         </div>
     </section>
+
     <!-- Examples section -->
     <section class="examples-section ">
         <div class="container">
@@ -185,8 +190,8 @@
                 <h2 class="examples-heading-text">One platform, endless possibilities</h2>
                 <a href="#" class="secondary-button">See more examples<i class="fa-solid fa-right-long"></i></a>
             </div>
-            <div class="examples-area flex">
 
+            <div class="examples-area flex">
                 <a class="examples-card" href="#" style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service1.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">Content Marketing</h3>
@@ -210,8 +215,8 @@
                 </a>
             </div>
         </div>
-        </div>
     </section>
+
     <!-- cta section -->
     <div class="cta-section">
         <div class="container flex cta-section-container">
@@ -222,6 +227,7 @@
             <a href="#" class="primary-button">Get started</a>
         </div>
     </div>
+
     <!-- footer -->
     <footer>
         <div class="container flex footer-container">
@@ -237,6 +243,7 @@
                     <a href="#" class="hover-link"><i class="fa-brands fa-twitter"></i>Twitter</a>
                 </div>
             </div>
+
             <div class="link-column flex">
                 <h4>Digital Marketing Institutes</h4>
                 <a href="#" class="hover-link">Udaipur</a>
@@ -245,6 +252,7 @@
                 <a href="#" class="hover-link">Dehradun</a>
                 <a href="#" class="hover-link">Raipur</a>
             </div>
+
             <div class="link-column flex">
                 <h4>Digital Marketing Companies</h4>
                 <a href="#" class="hover-link">New York</a>
@@ -255,6 +263,7 @@
                 <a href="#" class="hover-link">Ahmedabad</a>
                 <a href="#" class="hover-link">Indore</a>
             </div>
+
             <div class="link-column flex">
                 <h4>Affiliate Products</h4>
                 <a href="#" class="hover-link">SEMRush Free Trial</a>
@@ -264,6 +273,8 @@
             </div>
         </div>
     </footer>
+
+    <!-- Subfooter -->
     <div class="subfooter">
         <div class=" flex toggleButton sub-footer-container">
             <a href="#" class="hover-link">Privacy policy</a>
@@ -274,9 +285,9 @@
         <h5>Copyright © 2023 Young Nomads | Digital Marketing</h5>
     </div>
 
+    <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/628003722a.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
